--- a/ia/spark.html
+++ b/ia/spark.html
@@ -345,12 +345,12 @@ worker2
                         Aquí, el argumento spark://localhost:7077 especifica la dirección del master. Si tu master no está en localhost, debes poner la IP o nombre de host del master. Por ejemplo, si el master tiene la IP 192.168.1.100, el comando sería:
                     </div>
                     <div class="comandos">
-                      <input type="text" class="text" value="sbin/start-worker.sh spark://localhost:7077" oninput="ajustarAncho(this)">
+                      <input type="text" class="text" value="sbin/start-worker.sh spark://192.168.1.100:7077" oninput="ajustarAncho(this)">
                       <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
                 <p>Ahora puedes verificar el estado de tu clúster. Ve a la interfaz web del master en tu navegador:</p>
-                <p>▱ <marcador class="resaltado8">Interfaz web del master: </marcador>http://localhost:8080 (cambia localhost por la IP o nombre de host del master si está en una máquina remota).</p>
+                <p>⦿ <marcador class="resaltado8">Interfaz web del master: </marcador>http://localhost:8080 (cambia localhost por la IP o nombre de host del master si está en una máquina remota).</p>
                 <p>Si los workers están bien conectados, deberías ver el estado de los workers en la interfaz web.</p>
                 <li>Paso 6: Ejecutar trabajos</li>
                 <div class="contenedor">
